--- a/index.html
+++ b/index.html
@@ -3,52 +3,388 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>موقعي التعليمي</title>
+    <title>موقعي التعليمي - منصة تعليمية احترافية</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
 
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #f4f4f4;
+        * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
         }
 
+        body {
+            font-family: 'Cairo', sans-serif;
+            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+            color: #333;
+            line-height: 1.6;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+        }
+
+        /* Header Styles */
         header {
-            background: #1a73e8;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
-            padding: 20px;
+            padding: 40px 20px;
             text-align: center;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+            position: relative;
+            overflow: hidden;
         }
 
+        header::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"><path d="M0,50 Q300,0 600,50 T1200,50 L1200,120 L0,120 Z" fill="rgba(255,255,255,0.1)"/></svg>');
+            background-size: cover;
+            background-position: bottom;
+        }
+
+        header h1 {
+            font-size: 2.5rem;
+            font-weight: 700;
+            margin-bottom: 10px;
+            position: relative;
+            z-index: 1;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+        }
+
+        header p {
+            font-size: 1.1rem;
+            opacity: 0.95;
+            position: relative;
+            z-index: 1;
+            font-weight: 300;
+        }
+
+        /* Navigation Styles */
         nav {
-            background: #fff;
-            padding: 15px;
-            text-align: center;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+            background: white;
+            padding: 15px 20px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            position: sticky;
+            top: 0;
+            z-index: 100;
+        }
+
+        nav ul {
+            list-style: none;
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 30px;
+            max-width: 1200px;
+            margin: 0 auto;
         }
 
         nav a {
-            margin: 0 15px;
             text-decoration: none;
-            color: #1a73e8;
-            font-weight: bold;
+            color: #667eea;
+            font-weight: 600;
+            font-size: 1rem;
+            padding: 8px 15px;
+            border-radius: 5px;
+            transition: all 0.3s ease;
+            position: relative;
         }
 
-        .content {
-            padding: 40px;
+        nav a::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            width: 0;
+            height: 2px;
+            background: linear-gradient(90deg, #667eea, #764ba2);
+            transition: width 0.3s ease;
+        }
+
+        nav a:hover {
+            color: #764ba2;
+            background: rgba(102, 126, 234, 0.1);
+        }
+
+        nav a:hover::after {
+            width: 100%;
+        }
+
+        /* Main Content Styles */
+        main {
+            flex: 1;
+            padding: 60px 20px;
+            max-width: 1200px;
+            margin: 0 auto;
+            width: 100%;
+        }
+
+        .hero-section {
             text-align: center;
+            margin-bottom: 60px;
+            animation: fadeInDown 0.8s ease;
         }
 
-        h1 {
+        .hero-section h2 {
+            font-size: 2rem;
             color: #333;
+            margin-bottom: 20px;
+            font-weight: 700;
         }
 
+        .hero-section p {
+            font-size: 1.1rem;
+            color: #666;
+            max-width: 600px;
+            margin: 0 auto 30px;
+            line-height: 1.8;
+        }
+
+        /* Courses Grid */
+        .courses-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 30px;
+            margin-top: 40px;
+        }
+
+        .course-card {
+            background: white;
+            border-radius: 12px;
+            padding: 30px;
+            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease;
+            cursor: pointer;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .course-card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 4px;
+            background: linear-gradient(90deg, #667eea, #764ba2);
+            transform: scaleX(0);
+            transform-origin: right;
+            transition: transform 0.3s ease;
+        }
+
+        .course-card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 15px 40px rgba(102, 126, 234, 0.2);
+        }
+
+        .course-card:hover::before {
+            transform: scaleX(1);
+            transform-origin: left;
+        }
+
+        .course-icon {
+            font-size: 3rem;
+            margin-bottom: 15px;
+        }
+
+        .course-card h3 {
+            font-size: 1.5rem;
+            color: #333;
+            margin-bottom: 15px;
+            font-weight: 700;
+        }
+
+        .course-card p {
+            color: #666;
+            margin-bottom: 20px;
+            line-height: 1.7;
+        }
+
+        .course-btn {
+            display: inline-block;
+            background: linear-gradient(135deg, #667eea, #764ba2);
+            color: white;
+            padding: 10px 25px;
+            border-radius: 25px;
+            text-decoration: none;
+            font-weight: 600;
+            transition: all 0.3s ease;
+            border: none;
+            cursor: pointer;
+            font-size: 0.95rem;
+        }
+
+        .course-btn:hover {
+            transform: scale(1.05);
+            box-shadow: 0 5px 20px rgba(102, 126, 234, 0.4);
+        }
+
+        /* Features Section */
+        .features-section {
+            background: white;
+            padding: 40px;
+            border-radius: 12px;
+            margin-top: 40px;
+            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
+        }
+
+        .features-section h3 {
+            text-align: center;
+            font-size: 1.8rem;
+            color: #333;
+            margin-bottom: 30px;
+            font-weight: 700;
+        }
+
+        .features-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 25px;
+        }
+
+        .feature-item {
+            text-align: center;
+            padding: 20px;
+        }
+
+        .feature-item .icon {
+            font-size: 2.5rem;
+            margin-bottom: 15px;
+        }
+
+        .feature-item h4 {
+            color: #667eea;
+            margin-bottom: 10px;
+            font-weight: 600;
+        }
+
+        .feature-item p {
+            color: #666;
+            font-size: 0.95rem;
+        }
+
+        /* Footer Styles */
         footer {
-            background: #1a73e8;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: white;
             text-align: center;
-            padding: 15px;
-            margin-top: 40px;
+            padding: 30px 20px;
+            margin-top: auto;
+            box-shadow: 0 -4px 12px rgba(0, 0, 0, 0.1);
+        }
+
+        footer p {
+            margin: 10px 0;
+            font-weight: 500;
+        }
+
+        footer a {
+            color: #fff;
+            text-decoration: none;
+            transition: opacity 0.3s ease;
+        }
+
+        footer a:hover {
+            opacity: 0.8;
+        }
+
+        /* Animations */
+        @keyframes fadeInDown {
+            from {
+                opacity: 0;
+                transform: translateY(-30px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(30px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .course-card {
+            animation: fadeInUp 0.6s ease;
+        }
+
+        .course-card:nth-child(2) {
+            animation-delay: 0.1s;
+        }
+
+        .course-card:nth-child(3) {
+            animation-delay: 0.2s;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 1.8rem;
+            }
+
+            header p {
+                font-size: 1rem;
+            }
+
+            nav ul {
+                gap: 15px;
+            }
+
+            nav a {
+                font-size: 0.9rem;
+                padding: 6px 12px;
+            }
+
+            main {
+                padding: 40px 15px;
+            }
+
+            .hero-section h2 {
+                font-size: 1.5rem;
+            }
+
+            .courses-container {
+                grid-template-columns: 1fr;
+            }
+
+            .features-grid {
+                grid-template-columns: 1fr;
+            }
+        }
+
+        @media (max-width: 480px) {
+            header h1 {
+                font-size: 1.5rem;
+            }
+
+            header {
+                padding: 30px 15px;
+            }
+
+            main {
+                padding: 30px 10px;
+            }
+
+            .course-card {
+                padding: 20px;
+            }
+
+            .features-section {
+                padding: 20px;
+            }
         }
     </style>
 </head>
@@ -56,22 +392,101 @@
 <body>
 
     <header>
-        <h1>مرحباً بك في موقعي التعليمي</h1>
+        <h1>🎓 منصتي التعليمية</h1>
+        <p>مركز تعليمي متكامل لتطوير مهاراتك الأكاديمية والمهنية</p>
     </header>
 
     <nav>
-        <a href="index.html">الرئيسية</a>
-        <a href="lesson1.html">كلاس وان</a>
-        <a href="lesson2.html">كلاس تو</a>
+        <ul>
+            <li><a href="#home">الرئيسية</a></li>
+            <li><a href="#courses">الدروس</a></li>
+            <li><a href="#features">المميزات</a></li>
+            <li><a href="#contact">تواصل معنا</a></li>
+        </ul>
     </nav>
 
-    <div class="content">
-        <h1>هذه الصفحة الرئيسية للموقع</h1>
-        <p>هنا المحتوى الأساسي للموقع — مشروع الويب الخاص بالتكليف.</p>
-    </div>
+    <main>
+        <section class="hero-section" id="home">
+            <h2>مرحباً بك في منصتنا التعليمية</h2>
+            <p>نقدم لك محتوى تعليمي عالي الجودة يساعدك على تطوير مهاراتك وتحقيق أهدافك الأكاديمية والمهنية بكفاءة واحترافية.</p>
+        </section>
 
-    <footer>
-        جميع الحقوق محفوظة © 2025
+        <section id="courses">
+            <h2 style="text-align: center; font-size: 2rem; color: #333; margin-bottom: 40px; font-weight: 700;">الدروس المتاحة</h2>
+            <div class="courses-container">
+                <a href="lesson1.html" style="text-decoration: none; color: inherit;">
+                    <div class="course-card">
+                        <div class="course-icon">📚</div>
+                        <h3>الدرس الأول</h3>
+                        <p>اكتسب المهارات الأساسية والمفاهيم الأساسية التي تحتاجها لبدء رحلتك التعليمية بنجاح وثقة.</p>
+                        <button class="course-btn">ابدأ الآن</button>
+                    </div>
+                </a>
+
+                <a href="lesson2.html" style="text-decoration: none; color: inherit;">
+                    <div class="course-card">
+                        <div class="course-icon">🎯</div>
+                        <h3>الدرس الثاني</h3>
+                        <p>تعمق في المواضيع المتقدمة وطور فهماً أعمق للمفاهيم الأساسية من خلال أمثلة عملية.</p>
+                        <button class="course-btn">ابدأ الآن</button>
+                    </div>
+                </a>
+
+                <div class="course-card">
+                    <div class="course-icon">🚀</div>
+                    <h3>دروس متقدمة</h3>
+                    <p>استكشف مواضيع متقدمة وتقنيات حديثة لتصبح خبيراً في مجالك وتحقق نتائج استثنائية.</p>
+                    <button class="course-btn">ابدأ الآن</button>
+                </div>
+            </div>
+        </section>
+
+        <section class="features-section" id="features">
+            <h3>لماذا اختيار منصتنا؟</h3>
+            <div class="features-grid">
+                <div class="feature-item">
+                    <div class="icon">✨</div>
+                    <h4>محتوى عالي الجودة</h4>
+                    <p>محتوى تعليمي متخصص ومحدث باستمرار من قبل خبراء في المجال</p>
+                </div>
+
+                <div class="feature-item">
+                    <div class="icon">⏰</div>
+                    <h4>تعلم في وقتك</h4>
+                    <p>ادرس بمرونة وفقاً لجدولك الخاص دون قيود زمنية أو مكانية</p>
+                </div>
+
+                <div class="feature-item">
+                    <div class="icon">👥</div>
+                    <h4>مجتمع داعم</h4>
+                    <p>انضم إلى مجتمع متعاون من المتعلمين والمعلمين المتخصصين</p>
+                </div>
+
+                <div class="feature-item">
+                    <div class="icon">🏆</div>
+                    <h4>شهادات معترف بها</h4>
+                    <p>احصل على شهادات رسمية معترف بها بعد إكمال الدورات</p>
+                </div>
+
+                <div class="feature-item">
+                    <div class="icon">💡</div>
+                    <h4>مشاريع عملية</h4>
+                    <p>طبق ما تعلمته من خلال مشاريع عملية وحقيقية</p>
+                </div>
+
+                <div class="feature-item">
+                    <div class="icon">📊</div>
+                    <h4>تتبع التقدم</h4>
+                    <p>راقب تقدمك وحلل أدائك من خلال لوحة تحكم شاملة</p>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer id="contact">
+        <p><strong>جميع الحقوق محفوظة © 2025 - منصتي التعليمية</strong></p>
+        <p>البريد الإلكتروني: <a href="mailto:info@example.com">info@example.com</a></p>
+        <p>الهاتف: <a href="tel:+966501234567">+966 50 123 4567</a></p>
     </footer>
 
 </body>
