--- a/lesson1.html
+++ b/lesson1.html
@@ -2,22 +2,628 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>الدرس الأول - أوامر Git الأساسية</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Cairo', sans-serif;
+            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+            color: #333;
+            line-height: 1.6;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+        }
+
+        /* Header Styles */
+        header {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+            padding: 40px 20px;
+            text-align: center;
+            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
+            position: relative;
+            overflow: hidden;
+        }
+
+        header::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120"><path d="M0,50 Q300,0 600,50 T1200,50 L1200,120 L0,120 Z" fill="rgba(255,255,255,0.1)"/></svg>');
+            background-size: cover;
+            background-position: bottom;
+        }
+
+        header h1 {
+            font-size: 2.5rem;
+            font-weight: 700;
+            margin-bottom: 10px;
+            position: relative;
+            z-index: 1;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+        }
+
+        header p {
+            font-size: 1.1rem;
+            opacity: 0.95;
+            position: relative;
+            z-index: 1;
+            font-weight: 300;
+        }
+
+        /* Navigation Styles */
+        nav {
+            background: white;
+            padding: 15px 20px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+            position: sticky;
+            top: 0;
+            z-index: 100;
+        }
+
+        nav ul {
+            list-style: none;
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 30px;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        nav a {
+            text-decoration: none;
+            color: #667eea;
+            font-weight: 600;
+            font-size: 1rem;
+            padding: 8px 15px;
+            border-radius: 5px;
+            transition: all 0.3s ease;
+            position: relative;
+        }
+
+        nav a::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            width: 0;
+            height: 2px;
+            background: linear-gradient(90deg, #667eea, #764ba2);
+            transition: width 0.3s ease;
+        }
+
+        nav a:hover {
+            color: #764ba2;
+            background: rgba(102, 126, 234, 0.1);
+        }
+
+        nav a:hover::after {
+            width: 100%;
+        }
+
+        /* Main Content */
+        main {
+            flex: 1;
+            padding: 60px 20px;
+            max-width: 1000px;
+            margin: 0 auto;
+            width: 100%;
+        }
+
+        .lesson-intro {
+            background: white;
+            padding: 30px;
+            border-radius: 12px;
+            margin-bottom: 40px;
+            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
+            border-right: 5px solid #667eea;
+            animation: fadeInDown 0.8s ease;
+        }
+
+        .lesson-intro p {
+            color: #666;
+            font-size: 1.1rem;
+            line-height: 1.8;
+        }
+
+        /* Commands Section */
+        .commands-section {
+            margin-bottom: 40px;
+        }
+
+        .commands-section h2 {
+            font-size: 1.8rem;
+            color: #333;
+            margin-bottom: 30px;
+            font-weight: 700;
+            text-align: center;
+        }
+
+        .commands-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 25px;
+        }
+
+        .command-card {
+            background: white;
+            border-radius: 12px;
+            padding: 25px;
+            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
+            transition: all 0.3s ease;
+            border-top: 4px solid #667eea;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .command-card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: linear-gradient(135deg, rgba(102, 126, 234, 0.05), transparent);
+            pointer-events: none;
+        }
+
+        .command-card:hover {
+            transform: translateY(-8px);
+            box-shadow: 0 15px 40px rgba(102, 126, 234, 0.2);
+        }
+
+        .command-icon {
+            font-size: 2.5rem;
+            margin-bottom: 15px;
+        }
+
+        .command-card h3 {
+            font-size: 1.3rem;
+            color: #667eea;
+            margin-bottom: 12px;
+            font-weight: 700;
+            font-family: 'Courier New', monospace;
+        }
+
+        .command-code {
+            background: #f5f5f5;
+            border: 1px solid #e0e0e0;
+            padding: 12px;
+            border-radius: 6px;
+            font-family: 'Courier New', monospace;
+            color: #d63384;
+            font-size: 0.95rem;
+            margin-bottom: 12px;
+            word-break: break-all;
+            overflow-x: auto;
+        }
+
+        .command-card p {
+            color: #666;
+            line-height: 1.7;
+            font-size: 0.95rem;
+        }
+
+        /* Examples Section */
+        .examples-section {
+            background: white;
+            padding: 40px;
+            border-radius: 12px;
+            margin-bottom: 40px;
+            box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
+            animation: fadeInUp 0.8s ease 0.2s both;
+        }
+
+        .examples-section h2 {
+            font-size: 1.8rem;
+            color: #333;
+            margin-bottom: 30px;
+            font-weight: 700;
+        }
+
+        .example-item {
+            margin-bottom: 30px;
+            padding-bottom: 30px;
+            border-bottom: 1px solid #e0e0e0;
+        }
+
+        .example-item:last-child {
+            border-bottom: none;
+            margin-bottom: 0;
+            padding-bottom: 0;
+        }
+
+        .example-item h4 {
+            color: #667eea;
+            font-size: 1.2rem;
+            margin-bottom: 12px;
+            font-weight: 600;
+        }
+
+        .example-code {
+            background: #2d2d2d;
+            color: #f8f8f2;
+            padding: 15px;
+            border-radius: 6px;
+            font-family: 'Courier New', monospace;
+            font-size: 0.9rem;
+            overflow-x: auto;
+            margin-bottom: 12px;
+            line-height: 1.6;
+        }
+
+        .example-code .command {
+            color: #66d9ef;
+        }
+
+        .example-code .comment {
+            color: #75715e;
+        }
+
+        .example-item p {
+            color: #666;
+            line-height: 1.7;
+        }
+
+        /* Tips Section */
+        .tips-section {
+            background: linear-gradient(135deg, rgba(102, 126, 234, 0.1), rgba(118, 75, 162, 0.1));
+            padding: 30px;
+            border-radius: 12px;
+            margin-bottom: 40px;
+            border-right: 5px solid #667eea;
+            animation: fadeInUp 0.8s ease 0.4s both;
+        }
+
+        .tips-section h3 {
+            color: #667eea;
+            font-size: 1.3rem;
+            margin-bottom: 20px;
+            font-weight: 700;
+        }
+
+        .tips-section ul {
+            list-style: none;
+            padding: 0;
+        }
+
+        .tips-section li {
+            color: #666;
+            margin-bottom: 12px;
+            padding-left: 30px;
+            position: relative;
+            line-height: 1.7;
+        }
+
+        .tips-section li::before {
+            content: '✓';
+            position: absolute;
+            left: 0;
+            color: #667eea;
+            font-weight: bold;
+            font-size: 1.2rem;
+        }
+
+        /* Navigation Buttons */
+        .lesson-nav {
+            display: flex;
+            justify-content: space-between;
+            gap: 20px;
+            margin-top: 40px;
+            flex-wrap: wrap;
+        }
+
+        .btn {
+            display: inline-flex;
+            align-items: center;
+            gap: 8px;
+            padding: 12px 30px;
+            border-radius: 25px;
+            text-decoration: none;
+            font-weight: 600;
+            transition: all 0.3s ease;
+            border: none;
+            cursor: pointer;
+            font-size: 1rem;
+        }
+
+        .btn-primary {
+            background: linear-gradient(135deg, #667eea, #764ba2);
+            color: white;
+        }
+
+        .btn-primary:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 10px 25px rgba(102, 126, 234, 0.3);
+        }
+
+        .btn-secondary {
+            background: white;
+            color: #667eea;
+            border: 2px solid #667eea;
+        }
+
+        .btn-secondary:hover {
+            background: #667eea;
+            color: white;
+        }
+
+        /* Footer */
+        footer {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+            text-align: center;
+            padding: 30px 20px;
+            margin-top: auto;
+            box-shadow: 0 -4px 12px rgba(0, 0, 0, 0.1);
+        }
+
+        footer p {
+            margin: 10px 0;
+            font-weight: 500;
+        }
+
+        /* Animations */
+        @keyframes fadeInDown {
+            from {
+                opacity: 0;
+                transform: translateY(-30px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(30px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 1.8rem;
+            }
+
+            header p {
+                font-size: 1rem;
+            }
+
+            nav ul {
+                gap: 15px;
+            }
+
+            nav a {
+                font-size: 0.9rem;
+                padding: 6px 12px;
+            }
+
+            main {
+                padding: 40px 15px;
+            }
+
+            .commands-grid {
+                grid-template-columns: 1fr;
+            }
+
+            .lesson-nav {
+                flex-direction: column;
+            }
+
+            .btn {
+                width: 100%;
+                justify-content: center;
+            }
+        }
+
+        @media (max-width: 480px) {
+            header h1 {
+                font-size: 1.5rem;
+            }
+
+            header {
+                padding: 30px 15px;
+            }
+
+            main {
+                padding: 30px 10px;
+            }
+
+            .command-card {
+                padding: 20px;
+            }
+
+            .examples-section {
+                padding: 20px;
+            }
+
+            .example-code {
+                font-size: 0.8rem;
+            }
+        }
+    </style>
 </head>
-<body style="font-family: Arial; padding: 40px;">
 
-    <h1>الدرس الأول: أوامر Git الأساسية</h1>
-    <p>في هذا الدرس نتعلم أهم أوامر Git:</p>
+<body>
 
-    <ul>
-        <li><b>git init</b> — لإنشاء مستودع جديد.</li>
-        <li><b>git add .</b> — لإضافة الملفات.</li>
-        <li><b>git commit -m "message"</b> — لحفظ التغييرات.</li>
-        <li><b>git push</b> — لرفع الملفات إلى GitHub.</li>
-    </ul>
+    <header>
+        <h1>📚 الدرس الأول: أوامر Git الأساسية</h1>
+        <p>تعلم أهم الأوامر اللازمة للتحكم بإصدارات المشاريع</p>
+    </header>
 
-    <br><br>
-    <a href="index.html">العودة للصفحة الرئيسية</a>
+    <nav>
+        <ul>
+            <li><a href="index.html">الرئيسية</a></li>
+            <li><a href="#commands">الأوامر</a></li>
+            <li><a href="#examples">أمثلة عملية</a></li>
+            <li><a href="#tips">نصائح مهمة</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <section class="lesson-intro">
+            <p>
+                في هذا الدرس سنتعلم أساسيات نظام التحكم بالإصدارات Git، وهو أداة قوية وضرورية لأي مطور. 
+                ستتمكن من إنشاء مستودعات، حفظ التغييرات، والتعاون مع فريقك بكفاءة. 
+                هذه الأوامر الأساسية ستكون أساس عملك اليومي كمطور.
+            </p>
+        </section>
+
+        <section class="commands-section" id="commands">
+            <h2>🔧 الأوامر الأساسية</h2>
+            <div class="commands-grid">
+                <div class="command-card">
+                    <div class="command-icon">🚀</div>
+                    <h3>git init</h3>
+                    <div class="command-code">git init</div>
+                    <p>ينشئ مستودع Git جديد في المجلد الحالي. هذا هو الأمر الأول الذي تستخدمه عند بدء مشروع جديد.</p>
+                </div>
+
+                <div class="command-card">
+                    <div class="command-icon">➕</div>
+                    <h3>git add</h3>
+                    <div class="command-code">git add .</div>
+                    <p>يضيف جميع الملفات المعدلة إلى منطقة التجميع (Staging Area). استخدم <code>.</code> لإضافة جميع الملفات.</p>
+                </div>
+
+                <div class="command-card">
+                    <div class="command-icon">💾</div>
+                    <h3>git commit</h3>
+                    <div class="command-code">git commit -m "message"</div>
+                    <p>يحفظ التغييرات في المستودع المحلي مع رسالة توضيحية تشرح ما تم تعديله.</p>
+                </div>
+
+                <div class="command-card">
+                    <div class="command-icon">☁️</div>
+                    <h3>git push</h3>
+                    <div class="command-code">git push origin main</div>
+                    <p>يرفع التغييرات المحفوظة محلياً إلى المستودع البعيد (Remote Repository) على GitHub أو منصة أخرى.</p>
+                </div>
+
+                <div class="command-card">
+                    <div class="command-icon">⬇️</div>
+                    <h3>git pull</h3>
+                    <div class="command-code">git pull origin main</div>
+                    <p>يجلب أحدث التغييرات من المستودع البعيد ويدمجها مع نسختك المحلية.</p>
+                </div>
+
+                <div class="command-card">
+                    <div class="command-icon">📊</div>
+                    <h3>git status</h3>
+                    <div class="command-code">git status</div>
+                    <p>يعرض حالة المستودع الحالي والملفات المعدلة والملفات المضافة للتجميع.</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="examples-section" id="examples">
+            <h2>💡 أمثلة عملية</h2>
+
+            <div class="example-item">
+                <h4>مثال 1: إنشاء مستودع جديد وحفظ أول تغيير</h4>
+                <div class="example-code">
+<span class="comment"># إنشاء مجلد جديد للمشروع</span>
+<span class="command">$ mkdir my-project</span>
+<span class="command">$ cd my-project</span>
+
+<span class="comment"># تهيئة مستودع Git</span>
+<span class="command">$ git init</span>
+
+<span class="comment"># إنشاء ملف جديد</span>
+<span class="command">$ echo "Hello Git" > README.md</span>
+
+<span class="comment"># إضافة الملف للتجميع</span>
+<span class="command">$ git add .</span>
+
+<span class="comment"># حفظ التغيير</span>
+<span class="command">$ git commit -m "Initial commit"</span>
+                </div>
+                <p>في هذا المثال، ننشئ مشروعاً جديداً ونحفظ أول تغيير فيه.</p>
+            </div>
+
+            <div class="example-item">
+                <h4>مثال 2: رفع المشروع إلى GitHub</h4>
+                <div class="example-code">
+<span class="comment"># إضافة المستودع البعيد</span>
+<span class="command">$ git remote add origin https://github.com/username/my-project.git</span>
+
+<span class="comment"># رفع التغييرات</span>
+<span class="command">$ git push -u origin main</span>
+
+<span class="comment"># في المرات القادمة، استخدم فقط:</span>
+<span class="command">$ git push</span>
+                </div>
+                <p>بعد إنشاء مستودع على GitHub، نربطه بمستودعنا المحلي ونرفع التغييرات.</p>
+            </div>
+
+            <div class="example-item">
+                <h4>مثال 3: سير العمل اليومي</h4>
+                <div class="example-code">
+<span class="comment"># تحديث المشروع من الخادم</span>
+<span class="command">$ git pull</span>
+
+<span class="comment"># تعديل الملفات (باستخدام محرر النصوص)</span>
+
+<span class="comment"># التحقق من الملفات المعدلة</span>
+<span class="command">$ git status</span>
+
+<span class="comment"># إضافة التغييرات</span>
+<span class="command">$ git add .</span>
+
+<span class="comment"># حفظ التغييرات برسالة واضحة</span>
+<span class="command">$ git commit -m "Add new feature"</span>
+
+<span class="comment"># رفع التغييرات</span>
+<span class="command">$ git push</span>
+                </div>
+                <p>هذا هو السير الطبيعي للعمل اليومي مع Git والتعاون مع الفريق.</p>
+            </div>
+        </section>
+
+        <section class="tips-section" id="tips">
+            <h3>⭐ نصائح مهمة</h3>
+            <ul>
+                <li>اكتب رسائل commit واضحة وموجزة تشرح التغييرات التي أجريتها</li>
+                <li>استخدم <code>git status</code> بشكل متكرر للتحقق من حالة المشروع</li>
+                <li>قم بـ commit متكرر بدلاً من حفظ كل التغييرات مرة واحدة</li>
+                <li>استخدم فروع (branches) لتطوير ميزات جديدة بشكل منفصل</li>
+                <li>تأكد من عمل <code>git pull</code> قبل بدء العمل لتجنب التضاربات</li>
+                <li>لا تنسَ حفظ ملف <code>.gitignore</code> لاستبعاد الملفات غير الضرورية</li>
+            </ul>
+        </section>
+
+        <div class="lesson-nav">
+            <a href="index.html" class="btn btn-secondary">← العودة للرئيسية</a>
+            <a href="lesson2.html" class="btn btn-primary">الدرس الثاني →</a>
+        </div>
+    </main>
+
+    <footer>
+        <p><strong>جميع الحقوق محفوظة © 2025 - منصتي التعليمية</strong></p>
+        <p>البريد الإلكتروني: <a href="mailto:osama.aten@gmail.com" style="color: white;">osama.aten@gmail.com</a></p>
+    </footer>
 
 </body>
 </html>
